# xrootdpyfs

./: .coveragerc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .isort.cfg  .travis.yml  AUTHORS  CHANGES  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE-NOTES.rst  old_fs.py  old_perf.py  old_test_env.py  old_test_fs_extras.py  pyproject.toml  pytest.ini  requirements.devel.txt  requirements.latest.txt  requirements.lowest.txt  run-docker.sh  run-tests.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  tests.yml
docs/: Makefile  conf.py  index.rst
test/: conftest.py  example.cfg  pyfs_test.py  pyxrootd_test.py  test_listdir.py  test_xrootdfs.py
tests/: conftest.py  fixture.py  perf.py  test_env.py  test_fs.py  test_fs_extras.py  test_opener.py  test_utils.py  test_xrdfile.py  test_xrdflags.py  test_xrootd_fs.py
tests/data/: multiline.txt  testa.txt
xrootdfs/: __init__.py  env.py  fs.py  opener.py  utils.py  version.py  xrdfile.py
xrootdpyfs/: __init__.py  _pyfs_compat.py  env.py  errors.py  fs.py  opener.py  path.py  utils.py  version.py  xrdfile.py  xrootd_fs.py
xrootdpyfs/fs_utils/: base.py  enums.py  errors.py  info.py  path.py  permissions.py  time.py  walk.py
