# This file is part of xrootdpyfs
# Copyright (C) 2015-2023 CERN.
#
# xrootdpyfs is free software; you can redistribute it and/or modify it under
# the terms of the Revised BSD License; see LICENSE file for more details.

[metadata]
name = xrootdpyfs
version = attr: xrootdpyfs.__version__
description = XRootDPyFS is a PyFilesystem interface for XRootD.
long_description = file: README.rst, CHANGES.rst
keywords = invenio database
license = BSD
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/xrootdpyfs
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    fs>=2.0.10,<3.0
    xrootd>=4.8.4,<5.0.0

[options.extras_require]
tests =
    mock>=4.0.0
    pytest-black>=0.3.0
    pytest-invenio>=1.4.5
    Sphinx==4.2.0

[options.entry_points]
fs.opener =
    root = xrootdpyfs.opener:XRootDPyOpener
    roots = xrootdpyfs.opener:XRootDPyOpener

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[tool:pytest]
; addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=xrootdpyfs --cov-report=term-missing
addopts = --isort --doctest-glob="*.rst" --doctest-modules --cov=xrootdpyfs --cov-report=term-missing
testpaths = tests xrootdpyfs

