# SPDX-FileCopyrightText: 2015-2023 CERN.
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = xrootdpyfs
version = attr: xrootdpyfs.__version__
description = XRootDPyFS is a PyFilesystem-like interface for XRootD.
long_description = file: README.rst, CHANGES.rst
keywords = xrootdpyfs
license = BSD
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/xrootdpyfs
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    xrootd>=5.0.0,<6.0.0

[options.extras_require]
tests =
    mock>=4.0.0
    pytest-black>=0.6.0
    pytest-invenio>=4.0.0,<5.0.0
    pytest-mock>=1.6.0
    sphinx>=4.5.0
    setuptools<82.0.0

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=xrootdpyfs --cov-report=term-missing
testpaths = tests xrootdpyfs
